--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-version 0.3.0 (WIP, 2025)
+version 0.3.0 (Oct 3, 2025)
 --------------------------
 Features and Improvements
 * update timer, verbose
